<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerBranchSearch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/branchSearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_for_branch"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/searchInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_type_of_search_and_fill_in_the_requisite_information"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/searchOptions"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/searchChoiceRG"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="wrap_content">

                <RadioButton
                    android:id="@+id/searchByAddressRB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/address" />

                <RadioButton
                    android:id="@+id/searchByHoursRB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/working_hours" />

                <RadioButton
                    android:id="@+id/searchByServiceRB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/service" />
            </RadioGroup>

            <Button
                android:id="@+id/searchButton"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/search"
                android:onClick="onSearchButtonClicked"
                android:layout_width="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/searchInstructions3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_name_of_your_city_there_must_be_no_spelling_mistakes"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/citycolon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/citySearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/oxenfurt"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addressTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addresscolon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/addressSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/_221b_baker_street"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hoursOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/searchInstructions4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_date_and_time_24_00"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/timeDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/dayRG"
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25">

                    <RadioButton
                        android:id="@+id/monButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/monday2" />

                    <RadioButton
                        android:id="@+id/tuesButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/tuesday2" />

                    <RadioButton
                        android:id="@+id/wedButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/wednesday2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/thurButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/thursday2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/friButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/friday2" />

                    <RadioButton
                        android:id="@+id/satButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/saturday2" />

                    <RadioButton
                        android:id="@+id/sunButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="setDayOnClick"
                        android:text="@string/sunday2" />

                </RadioGroup>

                <TextView
                    android:id="@+id/hoursTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/time_you_wish_to_visit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/timeEditText"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/_13_00_or_15"
                    android:inputType="time" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/serviceOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/searchInstructions6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_the_type_of_search_and_fill_in_the_requisite_information"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/serviceListLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/serviceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servicecolon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/serviceSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/branchList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="onBackButtonClicked"
            android:text="@string/back_to_welcome_screen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>